# personal-mcp

./: .gitignore  .pre-commit-config.yaml  README.md  mcp.json  pyproject.toml
src/personal_mcp/: __init__.py  __main__.py  cli.py  database.py  models.py  prompts.py  resources.py  server.py
src/personal_mcp/tools/: journal.py  nutrition.py  workout.py
tests/: conftest.py  test_cli.py  test_database.py  test_models.py  test_server.py
