[project]
name = "personal-mcp"
version = "0.1.0"
description = "Personal MCP server for health and well-being tracking"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["mcp", "health", "tracking"]
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "mcp>=0.1.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "rich>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-cov",
    "pytest-asyncio",
    "black",
    "ruff",
    "mypy",
    "pre-commit",
]

[project.urls]
Homepage = "https://github.com/yourusername/personal-mcp"
Repository = "https://github.com/yourusername/personal-mcp.git"
"Bug Tracker" = "https://github.com/yourusername/personal-mcp/issues"

[project.scripts]
personal-mcp = "personal_mcp.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "B", "I"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=personal_mcp"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/personal_mcp"]

[tool.hatch.metadata]
allow-direct-references = true
